--- a/PetraPulse/src/main/resources/templates/SignUpPage.html
+++ b/PetraPulse/src/main/resources/templates/SignUpPage.html
@@ -12,7 +12,7 @@
 
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
-    <div th:if="${usernameMessage}" th:text="${usernameMessage}"></div>
+    <div th:if="${signupUsernameMessage}" th:text="${signupUsernameMessage}"></div>
 
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" required>
@@ -20,7 +20,11 @@
 
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required>
-    <div th:if="${passwordMessage}" th:text="${passwordMessage}"></div>
+    <div th:if="${signupPasswordMessage}" th:text="${signupPasswordMessage}"></div>
+
+    <label for="confirmPassword">Confirm Password:</label>
+    <input type="password" id="confirmPassword" name="confirmPassword" required>
+    <div th:if="${confirmPasswordMessage}" th:text="${confirmPasswordMessage}"></div>
 
     <label for="country">Country:</label>
     <select id="country" name="country" required>
@@ -32,8 +36,10 @@
     <label for="dateOfBirth">Date Of Birth:</label>
     <input type="Date" id="dateOfBirth" name="dateOfBirth" required>
     <div th:if="${dateOfBirthMessage}" th:text="${dateOfBirthMessage}"></div>
+    <div th:if="${dateOfBirthMessage2}" th:text="${dateOfBirthMessage2}"></div>
 
     <button type="submit">Sign Up</button>
+    <a href="/login">Already Have An Account? Login</a>
 </form>
 
 </body>
