--- a/PetraPulse/src/main/resources/templates/HomePage.html
+++ b/PetraPulse/src/main/resources/templates/HomePage.html
@@ -6,7 +6,8 @@
     <title>Home Page</title>
 </head>
 <body>
-    <h2>Home Page</h2>
-    <a th:href="@{/perform_logout}">Logout</a></li>
+<h2>Home Page</h2>
+<p>Welcome, <span th:text="${username}"></span>!</p>
+<a th:href="@{/logout}">Logout</a>
 </body>
 </html>
