--- a/PetraPulse/src/main/resources/templates/LoginPage.html
+++ b/PetraPulse/src/main/resources/templates/LoginPage.html
@@ -8,22 +8,21 @@
 <body>
 <div class="login-container">
     <h2>Login</h2>
-    <form id="loginForm">
+    <form id="loginForm" th:action="@{/login}" method="post">
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
-            <div th:if="${loginUsernameMessage}" th:text="${loginUsernameMessage}"></div>
+            <div th:if="${loginUsernameMessage}" th:text="${loginUsernameMessage}" class="error-message"></div>
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
-            <div th:if="${loginPasswordMessage}" th:text="${loginPasswordMessage}"></div>
+            <div th:if="${loginPasswordMessage}" th:text="${loginPasswordMessage}" class="error-message"></div>
         </div>
         <div class="form-group">
             <button type="submit">Login</button>
         </div>
     </form>
 </div>
-
 </body>
 </html>
